# pgwarden

./: .dockerignore  .env.api.example  .env.collector.example  .env.db.example  .env.example  .env.frontend.example  .env.migrations.example  .env.notifier.example  .gitignore  README.md  config.yaml  docker-compose.test.yaml  docker-compose.yaml  presets.collector.yaml  pyproject.toml  run_tests.sh
analytics/: README.md  __init__.py  config.yaml  main.py  pyproject.toml
analytics/config/: __init__.py  load.py
analytics/database/: __init__.py  connection.py
analytics/database/models/: __init__.py
analytics/database/models/analytics/: __init__.py  config.py  query.py  query_analysis.py  query_analysis_finding.py  query_column_hit.py  query_table_hit.py  run.py
analytics/database/models/metadata/: __init__.py  column.py  database.py  index.py  index_column.py  table.py
analytics/database/models/metric/: __init__.py  column.py  cpu.py  database_stat.py  disk.py  index.py  io.py  lock.py  native_query.py  ram.py  session.py  table.py
analytics/parser/: __init__.py  models.py  postgres.py
analytics/services/: __init__.py  query_analysis.py  query_hits.py  runs.py
analytics/tests/: test_postgres_parser.py
analytics/utils/: __init__.py  env_var.py
api/: .dockerignore  .env.docker  .env.example  Dockerfile  main.py  pyproject.toml
api/app/auth/: models.py  router.py  services.py
api/app/common/: models.py
api/app/databases/: models.py  router.py
api/app/databases/analytics/: models.py  router.py  services.py
api/app/databases/configs/: models.py  router.py
api/app/databases/docs/: models.py  router.py
api/app/docs/: models.py
api/app/notifier/: models.py  router.py
api/app/query_analytics/: models.py  router.py  services.py
api/app/schema/: exceptions.py  router.py  services.py
api/app/schemas/: router.py
api/app/server/: models.py  router.py
api/app/servers/: router.py
api/app/tags/: embeddings.py  models.py  router.py  services.py
api/database/: connection.py
api/database/models/: __init__.py
api/log/: config.py
api/tests/: conftest.py  test_database.py
api/tests/integration/: test_auth.py  test_databases.py  test_docs.py  test_notifier.py  test_query_analytics.py  test_runs.py  test_schemas.py  test_servers.py
api/utils/: __init__.py  crypto.py  embeddings.py  env_var.py  path_config.py
collector/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
collector/collector/: main.py  models.py
collector/collector/collectors/: __init__.py  base.py
collector/config/: main.py  upsert.py
collector/database/: __init__.py  registry.py
collector/database/migrations/: 20260324_01_pUn2z.sql
collector/log/: config.py
collector/scheduler/: main.py
collector/utils/: crypto.py
migrations/: 20260324_01_pUn2z.sql  Dockerfile  apply_migrations.py  pyproject.toml  yoyo.ini
migrations/sql/: 20260324_01_pUn2z.rollback.sql  20260324_01_pUn2z.sql  20260408_01_vVWWG-api-migrations.rollback.sql  20260408_01_vVWWG-api-migrations.sql  20260424_01_9UN1w-add-n-mod-since-analyze.rollback.sql  20260424_01_9UN1w-add-n-mod-since-analyze.sql  20260424_02_tsdbop-timescale-tuning.rollback.sql  20260424_02_tsdbop-timescale-tuning.sql  20260425_02_docs-tags-history.rollback.sql  20260425_02_docs-tags-history.sql  20260623_01_database-stats-metric.rollback.sql  20260623_01_database-stats-metric.sql  20260624_01_native-query-metric.rollback.sql  20260624_01_native-query-metric.sql  20260627_01_schema-index-history.rollback.sql  20260627_01_schema-index-history.sql  20260630_01_query-analytics-indexes.rollback.sql  20260630_01_query-analytics-indexes.sql  20260706_01_embeddings-doc-and-tags.rollback.sql  20260706_01_embeddings-doc-and-tags.sql  20260709_01_zo2AJ-analytics-module.rollback.sql  20260709_01_zo2AJ-analytics-module.sql  20260720_01_notifier-module.rollback.sql  20260720_01_notifier-module.sql
migrations/tests/: conftest.py  test_migrations.py
notifier/: Dockerfile  README.md  THRESHOLDS.md  config.yaml.example  main.py  pyproject.toml
notifier/channels/: __init__.py  base.py  discord.py  email.py  slack.py  teams.py
notifier/config/: __init__.py  load.py  sync.py
notifier/database/: __init__.py  connection.py  queries.py
notifier/services/: __init__.py  evaluator.py  notifications.py  rules.py
notifier/tests/: test_channels.py  test_config.py  test_notifications.py  test_rules.py  test_thresholds.py
notifier/utils/: __init__.py  crypto.py  env_var.py
(+230 files in other folders)
