[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncpg>=0.30.0",
    "bcrypt<4",
    "cryptography>=46.0.7",
    "fastapi>=0.115.12",
    "gunicorn>=25.3.0",
    "passlib>=1.7.4",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pydantic[email]>=2.11.4",
    "pyjwt>=2.11.0",
    "pytest>=8.3.5",
    "pytest-html>=4.1.1",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "sse-starlette>=2.0.0",
    "uvicorn>=0.34.2",
]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
