[project]
name = "pgwarden-api"
version = "0.1.0"
description = "PGWarden API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "gunicorn>=23.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic[email]>=2.0.0",
    "passlib>=1.7.4",
    "bcrypt<4.0.0",
    "cryptography>=44.0.0",
    "PyJWT>=2.8.0",
    "sse-starlette>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.0",
    "pytest-html>=4.1.1",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
