[project]
name = "notifier"
version = "0.1.0"
description = "PGWarden alert notifier — evaluates metric thresholds and dispatches alerts to Slack, Discord, Teams and Email."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.28.0",
    "aiosmtplib>=3.0.0",
    "cryptography>=43.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
pythonpath = [".."]
asyncio_mode = "auto"
